--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Hola Mundo</h1>
     <h1>Adios Mundo</h1>
-    <img src="imagenes/imagen1" alt="">
-    <img src="imagenes/imagen2" alt="">
-    <img src="imagenes/imagen3" alt="">
-    <img src="imagenes/imagen4" alt="">
-    <img src="imagenes/imagen5" alt="">
+    <img src="imagenes/imagen1.jpg" alt="">
+    <img src="imagenes/imagen2.jpg" alt="">
+    <img src="imagenes/imagen3.jpg" alt="">
+    <img src="imagenes/imagen4.jpg" alt="">
+    <img src="imagenes/imagen5.jpg" alt="">
 </body>
 </html>
